# AdaptiveBatcher

./: .gitignore  CLAUDE.md  CMakeLists.txt
analysis/: plot_latency_cdf.py  plot_policy_decisions.py  plot_regime_adaptation.py  plot_reward_convergence.py
benchmarks/: bench_feature_extract.cpp  bench_policy_inference.cpp  bench_spsc_queue.cpp  bench_vs_fixed.cpp
include/adaptive_batcher/: adaptive_batcher.hpp  batch_buffer.hpp  common.hpp  experience_queue.hpp  market_features.hpp  policy_engine.hpp  training_thread.hpp
simulation/: market_simulator.cpp  regime_generator.cpp  validate_adaptive.cpp
src/: adaptive_batcher.cpp  batch_buffer.cpp  market_features.cpp  policy_engine.cpp  training_thread.cpp
tasks/: lessons.md  todo.md
tests/: test_feature_extraction.cpp  test_policy_correctness.cpp  test_rcu_weights.cpp  test_safe_exploration.cpp  test_spsc_queue.cpp
